--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Site Title"
-title_separator          : "-"
+title                    : "개발자 룬"
+title_separator          : "development log"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Your Name"
+name                     : "Developer Rune"
 description              : "An amazing website."
 url                      : "https://JIHOON8362.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
